--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Iivaqsaat</title>
+  <title>Final Project DATA 303</title>
   <link rel="stylesheet" href="css/poem_style.css">
 </head>
 <body>
