--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <p> The text below is an excerpt from a poem by Inupiaq-Inuit poet dg nanouk okpik</p>
-  <h2>For-The-Spirits-Who-Have-Rounded-The-Bend<br></h2>
+  <h2>Japanese Internment<br></h2>
     <p class="italic">Iivaqsaat&emsp;&emsp;&emsp;    for my dear mothers</p>
    <span class="quote">
    <p>When an Inuk leaves a round home and enters into a square house he<br>
