--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Final Project DATA 303</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="sheastyle.css">
 </head>
 <body>
   <p> The text below is an excerpt from a poem by Inupiaq-Inuit poet dg nanouk okpik</p>
