--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@ body {font-family: "Lato", sans-serif}
   </div>
   <div class="mySlides w3-display-container w3-center">
     <img src="Dortheacomic.jpg" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">   
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <h3>Inside the Camps</h3>
+      <p><b>Photos by Dorothea Lange</b></p>   
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
