--- a/index.html
+++ b/index.html
@@ -153,7 +153,11 @@ body {font-family: "Lato", sans-serif}
   </div>
   <h2 class="w3-wide"> Conclusion</h2>
   <p class="w3-justify"> 
-    There is no monolithic summary that can properly account for each lived experience of the 120,000 Japanese individuals during incarceration. Each of these visualizations work together to create the larger picture of the scale of which this system of exclusion operated on, but doesn’t fully grapple with the stories of those who endured it. Though internment had profound and lasting effects on Japanese communities, many have strived to keep this memory alive. In doing so, Japanese and Japanese-Americans have stronger ability to speak out when other minority groups are unfairly targeted by their race, ethnicity, or other hyphenated identities.     
+    There is no monolithic summary that can properly account for each lived experience of the 120,000 Japanese individuals during incarceration. 
+    Each of these visualizations work together to create the larger picture of the scale of which this system of exclusion operated on, 
+    but doesn’t fully grapple with the stories of those who endured it. Though internment had profound and lasting effects on Japanese communities, 
+    many have strived to keep this memory alive. In doing so, Japanese and Japanese-Americans have stronger ability to speak out when other minority 
+    groups are unfairly targeted by their race, ethnicity, or other hyphenated identities.     
     </p> 
 </div>
 
